@@ -2,7 +2,7 @@
 # Kernel/Modules/AgentTicketMove.pm - move tickets to queues
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentTicketMove.pm,v 1.68 2010-09-08 12:30:17 mg Exp $
+# $Id: AgentTicketMove.pm,v 1.69 2010-09-23 18:15:15 cg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -18,7 +18,7 @@ use Kernel::System::State;
 use Kernel::System::Web::UploadCache;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.68 $) [1];
+$VERSION = qw($Revision: 1.69 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -849,6 +849,8 @@ sub Run {
 sub AgentMove {
     my ( $Self, %Param ) = @_;
 
+    $Param{DestQueueIDInvalid} = $Param{DestQueueIDInvalid} || '';
+
     my %Data       = %{ $Param{MoveQueues} };
     my %MoveQueues = %Data;
     my %UsedData;
@@ -1025,8 +1027,26 @@ sub AgentMove {
         }
     }
 
+    # fillup configured default vars
+    if ( $Param{Body} eq '' && $Self->{Config}->{Body} ) {
+        $Param{Body} = $Self->{LayoutObject}->Output(
+            Template => $Self->{Config}->{Body},
+        );
+    }
+
+    if ( $Param{Subject} eq '' && $Self->{Config}->{Subject} ) {
+        $Param{Subject} = $Self->{LayoutObject}->Output(
+            Template => $Self->{Config}->{Subject},
+        );
+    }
+
     # add rich text editor
     if ( $Self->{LayoutObject}->{BrowserRichText} ) {
+
+        # make sure body is rich text
+        $Param{Body} = $Self->{LayoutObject}->Ascii2RichText(
+            String => $Param{Body},
+        );
         $Self->{LayoutObject}->Block(
             Name => 'RichText',
             Data => \%Param,
